# KMA-SZZ

./: .gitignore  README.md  notes.md  pyproject.toml  test.ipynb
SZZ1/11/: kody.ipynb
SZZ1/16/: 16.ipynb  index.tex  notes.md
SZZ2/: optimalizace.ipynb  statistika.ipynb
SZZ2/C/: maps.ipynb
SZZ2/D/: CAS.py  casove_rady.ipynb  casove_rady.r  souvenirtimeseries.csv
SZZ2/E/: optimalizace.ipynb
SZZ2/notes/: statistika.md
data/: survey_data.csv
