[tool.poetry]
name = "kma-szz"
version = "0.1.0"
description = ""
authors = ["yoptohlejepeta <peta.kotlan@seznam.cz>"]
readme = "README.md"
packages = [{include = "kma_szz"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
numpy = "^1.26.4"
pyecharts = "^2.0.5"
scipy = "^1.13.1"
seaborn = "^0.13.2"
matplotlib = "^3.9.0"
loguru = "^0.7.2"
plotly = "^5.22.0"
nbformat = "^5.10.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
